# opensearch-semantic-test

./: .gitignore  README.md  a.md  docker-compose.yml  get_vector.py  import_enron_1.py  import_enron_2.py  ingest_enron_1.py  ingest_enron_2.py  ingest_enron_semantic_1.py  ingest_enron_semantic_2.py  main.py  pyproject.toml  semantic_search_2.ipynb  test_import_data.py  test_semantic.py
