[project]
name = "opensearch-semantic-test"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.4",
    "eml_parser==2.0.0",
    "google-generativeai==0.8.5",
    "grpcio-status==1.71.2",
    "ipykernel==6.29.5",
    "opensearch-py==3.0.0",
    "python-dotenv==1.1.1",
    "sentence-transformers==5.0.0",
]
